--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Comprar Saldo - CubaRecarga</title>
+  <title>Venta Cuballama - Autos y más</title>
 
   <style>
     *, *::before, *::after {
@@ -20,6 +20,7 @@
       align-items: flex-start;
       min-height: 100vh;
       overflow-x: hidden;
+      position: relative;
     }
 
     .container {
@@ -30,6 +31,8 @@
       max-width: 420px;
       width: 100%;
       margin: 0 10px 40px 10px;
+      position: relative;
+      z-index: 5;
     }
 
     .verificado {
@@ -133,15 +136,95 @@
       100% { transform: translateY(0); }
     }
 
+    /* Caja mensaje final */
     .final-msg {
       display: none;
-      background-color: #fff8dc;
-      border: 1px solid #facc15;
-      padding: 15px;
-      border-radius: 8px;
+      background-color: #ffecec;
+      border: 2px solid #ef4444;
+      padding: 25px;
+      border-radius: 12px;
       text-align: center;
-      color: #92400e;
+      color: #b91c1c;
       font-weight: bold;
+      font-size: 22px;
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.15);
+      animation: aparecer 0.6s ease-in-out;
+      position: relative;
+      z-index: 10;
+    }
+
+    @keyframes aparecer {
+      from { opacity: 0; transform: scale(0.8); }
+      to { opacity: 1; transform: scale(1); }
+    }
+
+    /* Promo Internacional restaurada */
+    .promo-box {
+      background: linear-gradient(135deg, #ff416c, #ff4b2b);
+      color: white;
+      padding: 20px;
+      text-align: center;
+      border-radius: 15px;
+      box-shadow: 0 0 25px rgba(255, 75, 43, 0.8);
+      margin-bottom: 20px;
+      cursor: pointer;
+      animation: brillo 2s infinite alternate;
+      transition: transform 0.25s ease-in-out, box-shadow 0.25s ease-in-out;
+    }
+
+    .promo-box:hover {
+      transform: scale(1.05);
+      box-shadow: 0 0 35px rgba(255, 75, 43, 1);
+    }
+
+    .promo-box h2 {
+      margin: 0;
+      font-size: 24px;
+      font-weight: bold;
+      text-transform: uppercase;
+      text-shadow: 1px 1px 5px rgba(0,0,0,0.3);
+    }
+
+    .promo-box p {
+      margin: 6px 0;
+      font-size: 16px;
+      font-weight: 500;
+    }
+
+    .promo-precio {
+      background: #fff;
+      color: #ff4b2b;
+      display: inline-block;
+      padding: 6px 18px;
+      border-radius: 8px;
+      font-size: 20px;
+      font-weight: bold;
+      margin: 12px 0;
+      box-shadow: 0 3px 10px rgba(0,0,0,0.2);
+    }
+
+    .btn-promo {
+      background: #fff;
+      color: #ff4b2b;
+      font-size: 16px;
+      font-weight: bold;
+      padding: 12px 20px;
+      border: none;
+      border-radius: 10px;
+      cursor: pointer;
+      transition: all 0.3s ease-in-out;
+      box-shadow: 0 4px 15px rgba(255, 75, 43, 0.6);
+    }
+
+    .btn-promo:hover {
+      background: #ffe3de;
+      transform: scale(1.08);
+      box-shadow: 0 6px 20px rgba(255, 75, 43, 0.8);
+    }
+
+    @keyframes brillo {
+      from { box-shadow: 0 0 15px rgba(255, 255, 255, 0.5); }
+      to   { box-shadow: 0 0 35px rgba(255, 255, 255, 1); }
     }
 
     .regresar {
@@ -158,124 +241,6 @@
     .regresar:hover {
       background-color: #2563eb;
     }
-
-    /* Caja de la Promo Internacional */
-    .promo-box {
-      background: linear-gradient(135deg, #ff416c, #ff4b2b);
-      color: white;
-      padding: 20px;
-      text-align: center;
-      border-radius: 12px;
-      box-shadow: 0 0 25px rgba(255, 75, 43, 0.7);
-      margin-bottom: 20px;
-      cursor: pointer;
-      animation: brillo 2s infinite alternate;
-      transition: transform 0.2s ease-in-out;
-    }
-
-    .promo-box:hover {
-      transform: scale(1.03);
-    }
-
-    .promo-box h2 {
-      margin: 0;
-      font-size: 22px;
-      font-weight: bold;
-    }
-
-    .promo-box p {
-      margin: 5px 0;
-      font-size: 15px;
-    }
-
-    .promo-precio {
-      background: white;
-      color: #ff4b2b;
-      display: inline-block;
-      padding: 6px 15px;
-      border-radius: 6px;
-      font-size: 18px;
-      font-weight: bold;
-      margin: 10px 0;
-    }
-
-    .btn-promo {
-      background: #ffffff;
-      color: #ff4b2b;
-      font-size: 16px;
-      font-weight: bold;
-      padding: 10px 18px;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      transition: background 0.3s, transform 0.2s;
-    }
-
-    .btn-promo:hover {
-      background: #ffe3de;
-      transform: scale(1.05);
-    }
-
-    /* Estilos del contador */
-    #contador {
-      font-size: 16px;
-      font-weight: bold;
-      background: #fff;
-      color: #ff4b2b;
-      display: inline-block;
-      padding: 5px 12px;
-      border-radius: 6px;
-      margin-top: 10px;
-      box-shadow: 0 0 10px rgba(255,255,255,0.7);
-    }
-
-    /* Animación de brillo */
-    @keyframes brillo {
-      from { box-shadow: 0 0 15px rgba(255, 255, 255, 0.6); }
-      to { box-shadow: 0 0 30px rgba(255, 255, 255, 1); }
-    }
-
-    /* Estilos del formulario integrado */
-    form.contact-form {
-      margin-top: 30px;
-      background: #f9fafb;
-      padding: 20px 15px;
-      border-radius: 8px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.07);
-    }
-    form.contact-form h2 {
-      margin-bottom: 15px;
-      font-weight: 700;
-      color: #0f172a;
-      font-size: 18px;
-      text-align: center;
-    }
-    form.contact-form input,
-    form.contact-form textarea {
-      width: 100%;
-      padding: 10px;
-      margin-bottom: 15px;
-      font-size: 15px;
-      border-radius: 6px;
-      border: 1px solid #cbd5e1;
-      font-family: inherit;
-      resize: vertical;
-    }
-    form.contact-form button {
-      width: 100%;
-      padding: 12px;
-      font-size: 16px;
-      font-weight: 700;
-      border-radius: 6px;
-      border: none;
-      background: #22c55e;
-      color: white;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-    form.contact-form button:hover {
-      background: #16a34a;
-    }
   </style>
 </head>
 <body>
@@ -289,14 +254,13 @@
 
     <h1>Comprar Saldo</h1>
 
-    <!-- PROMO DESTACADA -->
+    <!-- PROMO INTERNACIONAL -->
     <div class="promo-box" onclick="seleccionarPromo()">
       <h2>🔥 PROMO INTERNACIONAL 🔥</h2>
-      <p>Del <strong>21 al 26 de agosto</strong></p>
-      <p><strong>🚀 QUINTUPLICA tu recarga + DATOS ILIMITADOS</strong> (12am - 7am)</p>
-      <p>📅 Válido por 30 días</p>
+      <p><strong>🚀 ETECSA Promocion Internacional: Datos ilimitados las 24 horas (validos por 10 dias)</strong> (24h)</p>
+      <p>📅 Válido por 10 días</p>
       <div id="contador">Cargando...</div>
-      <div class="promo-precio">💰 5575 CUP</div>
+      <div class="promo-precio">💰 4450 CUP</div>
       <button class="btn-promo">¡APROVECHAR AHORA!</button>
     </div>
 
@@ -306,15 +270,16 @@
 
     <label for="recarga">Selecciona el monto</label>
     <select id="recarga">
+      <option value="1425">1000 saldo - 1425 CUP</option>
       <option value="1950">1500 saldo - 1950 CUP</option>
       <option value="3250">2500 saldo - 3250 CUP</option>
       <option value="4700">3500 saldo - 4700 CUP</option>
       <option value="6700">5500 saldo - 6700 CUP</option>
       <option value="9500">8300 saldo - 9500 CUP</option>
-      <option value="5575">🚀 Promo Internacional (21-26 ago): QUINTUPLICA tu recarga + datos ilimitados (12am-7am) por 30 días - 5575 CUP</option>
+      <option value="5575">🚀 Promo Internacional: Datos Ilimitados por 24h  (24h) por 10 días - 4450 CUP</option>
     </select>
 
-    <div class="price" id="precio">Total a pagar: 1950 CUP</div>
+    <div class="price" id="precio">Total a pagar: 1425 CUP</div>
 
     <div class="card-info">
       Enviar transferencia a la tarjeta:<br><strong>9238 1299 7764 8304</strong>
@@ -334,15 +299,6 @@
     </div>
 
     <div class="final-msg" id="finalMsg"></div>
-
-    <!-- Formulario integrado Formspree -->
-    <form class="contact-form" action="https://formspree.io/f/xanbvdol" method="POST">
-      <h2>Envíanos un mensaje</h2>
-      <input type="text" name="nombre" placeholder="Tu nombre" required>
-      <input type="email" name="email" placeholder="Tu correo" required>
-      <textarea name="mensaje" placeholder="Escribe tu mensaje" rows="4" required></textarea>
-      <button type="submit">Enviar mensaje</button>
-    </form>
   </div>
 
   <script>
@@ -361,8 +317,8 @@
     });
 
     function seleccionarPromo() {
-      recarga.value = "5575";
-      precio.innerText = "Total a pagar: 5575 CUP";
+      recarga.value = "4450";
+      precio.innerText = "Total a pagar: 4450 CUP";
       document.querySelector('.btn').scrollIntoView({ behavior: 'smooth' });
     }
 
@@ -388,39 +344,19 @@
       setTimeout(() => {
         loading.style.display = 'none';
         finalMsg.innerHTML = `
-          ❌ No se ha registrado ninguna transferencia del número <strong>${telefono}</strong>.<br>
-          Transfiera a la tarjeta designada y luego toque en confirmar.<br><br>
+          <span style="font-size:40px;">❌</span><br>
+          <div style="font-size: 22px; font-weight: bold; color: #b91c1c;">
+            Pago no registrado
+          </div>
+          <div style="font-size: 18px; margin-top: 5px; color: #7f1d1d;">
+            Por favor, realice el pago o verifique que el código de transacción sea el correcto.
+          </div>
+          <br>
           <button class="regresar" onclick="location.reload()">Regresar</button>
         `;
         finalMsg.style.display = 'block';
-      }, 5000);
+      }, 3000);
     });
-
-    // Contador regresivo
-    function iniciarContador() {
-      const fechaFinal = new Date("Aug 26, 2025 23:59:59").getTime();
-
-      setInterval(() => {
-        const ahora = new Date().getTime();
-        const diferencia = fechaFinal - ahora;
-
-        if (diferencia <= 0) {
-          contador.innerHTML = "⛔ PROMO FINALIZADA";
-          contador.style.background = "gray";
-          contador.style.color = "white";
-          return;
-        }
-
-        const dias = Math.floor(diferencia / (1000 * 60 * 60 * 24));
-        const horas = Math.floor((diferencia % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-        const minutos = Math.floor((diferencia % (1000 * 60 * 60)) / (1000 * 60));
-        const segundos = Math.floor((diferencia % (1000 * 60)) / 1000);
-
-        contador.innerHTML = `⏳ Termina en: ${dias}d ${horas}h ${minutos}m ${segundos}s`;
-      }, 1000);
-    }
-
-    iniciarContador();
   </script>
 </body>
 </html>
