--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
       to { opacity: 1; transform: scale(1); }
     }
 
-    /* Promo Internacional restaurada */
+    /* Promo Internacional */
     .promo-box {
       background: linear-gradient(135deg, #ff416c, #ff4b2b);
       color: white;
@@ -241,6 +241,14 @@
     .regresar:hover {
       background-color: #2563eb;
     }
+
+    /* Estilo contador */
+    #contador {
+      font-size: 18px;
+      margin: 10px 0;
+      font-weight: bold;
+      color: #fff;
+    }
   </style>
 </head>
 <body>
@@ -256,11 +264,11 @@
 
     <!-- PROMO INTERNACIONAL -->
     <div class="promo-box" onclick="seleccionarPromo()">
-      <h2>🔥 PROMO INTERNACIONAL 🔥</h2>
-      <p><strong>🚀 ETECSA Promocion Internacional: Datos ilimitados las 24 horas (validos por 10 dias)</strong> (24h)</p>
-      <p>📅 Válido por 10 días</p>
+      <h2>✨ QUINTUPLICA TU RECARGA ✨</h2>
+      <p>🌙 Del <strong>17 al 20 de septiembre</strong>, ¡quintuplicamos tu saldo principal + datos ilimitados todas las noches por 30 días!</p>
+      <p>#RecargaInternacional</p>
       <div id="contador">Cargando...</div>
-      <div class="promo-precio">💰 4450 CUP</div>
+      <div class="promo-precio">💵 4950 CUP</div>
       <button class="btn-promo">¡APROVECHAR AHORA!</button>
     </div>
 
@@ -276,7 +284,7 @@
       <option value="4700">3500 saldo - 4700 CUP</option>
       <option value="6700">5500 saldo - 6700 CUP</option>
       <option value="9500">8300 saldo - 9500 CUP</option>
-      <option value="5575">🚀 Promo Internacional: Datos Ilimitados por 24h  (24h) por 10 días - 4450 CUP</option>
+      <option value="4950">✨ Quintuplica tu recarga + datos ilimitados - 4950 CUP</option>
     </select>
 
     <div class="price" id="precio">Total a pagar: 1425 CUP</div>
@@ -317,8 +325,8 @@
     });
 
     function seleccionarPromo() {
-      recarga.value = "4450";
-      precio.innerText = "Total a pagar: 4450 CUP";
+      recarga.value = "4950";
+      precio.innerText = "Total a pagar: 4950 CUP";
       document.querySelector('.btn').scrollIntoView({ behavior: 'smooth' });
     }
 
@@ -344,7 +352,7 @@
       setTimeout(() => {
         loading.style.display = 'none';
         finalMsg.innerHTML = `
-          <span style="font-size:40px;">❌</span><br>
+          <span style="font-size:40px;">⚠️</span><br>
           <div style="font-size: 22px; font-weight: bold; color: #b91c1c;">
             Pago no registrado
           </div>
@@ -357,6 +365,25 @@
         finalMsg.style.display = 'block';
       }, 3000);
     });
+
+    // Cronómetro hasta 20 de septiembre 2025
+    const fechaLimite = new Date("September 20, 2025 23:59:59").getTime();
+    setInterval(() => {
+      const ahora = new Date().getTime();
+      const distancia = fechaLimite - ahora;
+
+      if (distancia <= 0) {
+        contador.innerHTML = "⏰ ¡La promoción ha finalizado!";
+        return;
+      }
+
+      const dias = Math.floor(distancia / (1000 * 60 * 60 * 24));
+      const horas = Math.floor((distancia % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+      const minutos = Math.floor((distancia % (1000 * 60 * 60)) / (1000 * 60));
+      const segundos = Math.floor((distancia % (1000 * 60)) / 1000);
+
+      contador.innerHTML = `⏳ ${dias}d ${horas}h ${minutos}m ${segundos}s`;
+    }, 1000);
   </script>
 </body>
 </html>
